--- a/styles-responsive.css
+++ b/styles-responsive.css
@@ -3,6 +3,10 @@
     color: black;
 }
 
+.fotoro {
+    text-decoration: none;
+    color: black;
+}
 
 
 #columna-2{
@@ -12,6 +16,13 @@
 
 .lista > a > p{
     font-weight: bold;
+}
+
+#fotoRobin{
+    width: 100%;
+    height: 100%;
+    max-width: 370px;
+    max-height: 500px;
 }
 
 .text-center > a > p {
