--- a/styles-responsive.css
+++ b/styles-responsive.css
@@ -18,11 +18,18 @@
     font-weight: bold;
 }
 
+.perfil{
+    text-align: center;
+}
+
 #fotoRobin{
+    margin-top: 60px;
+    margin-bottom: 10px;
     width: 100%;
     height: 100%;
     max-width: 370px;
     max-height: 500px;
+    
 }
 
 .text-center > a > p {
