--- a/styles.css
+++ b/styles.css
@@ -29,13 +29,20 @@ body{
     color: black;
 }
 
+.perfil{
+    text-align: center;
+}
+
 #fotoRobin{
     width: 100%;
     height: 100%;
-    max-width: 370px;
-    max-height: 500px;
+    max-width: 180px;
+    max-height: 250px;
 }
 
+.centro{
+    height: 100%;
+}
 
 img{
     width: 900px;
